syntax = "proto3";
package docker;

service Greeter {
  rpc Exec (stream DockerRequest) returns (stream DockerReply);
}

message DockerRequest {
  Action action = 1;
  string agent_id = 2;
  string payload = 3;
}

message DockerReply {
  Action action = 1;
  string payload = 2;
}

enum Action {
  UploadStatus = 0;
  UpLine = 1;
  CreateContainer = 2;
  PullImage = 3;
}